# mbn-mcfg-tools

./: FORMAT.md  README.md  extract.py  flake.nix  pyproject.toml
mbn/: .gitignore  README.md
mbn/Google_MBN/: README.md
mbn/Nokia_MBN/20190130_Nokia_2.1_Snapdragon_425_MSM8917/: E2M-0-108C-NV-default.mbn  E2M-108C-0-00WW-B01.v2.md5  NvDefinition.xml  ver_info.txt
mbn/Nokia_MBN/20200411_Nokia_1.3_TA-Android_SecPatch_V1.130_mbn_05_Snapdragon_215_QM215/: ver_info.txt
mbn/Nokia_MBN/20200611_Nokia_1.3_TA-Drax_1160_mbn_05_Snapdragon_215_QM215/: ver_info.txt
mbn/Nokia_MBN/20201014_Nokia_1.4_TA-1323_0010_mbn_05_Snapdragon_215_QM215/: rom.json  ver_info.txt
mbn/Nokia_MBN/20210106_Nokia_1.4_TA-1322_0010_mbn_05_Snapdragon_215_QM215/: rom.json  ver_info.txt
mbn/Xiaomi_MBN/: README.md
mbntools/: mbn.py  mbn_json.py  mcfg.py  utils.py
scripts/: combine_default.py  compare.py  downgrade.py  extract_epdg_fqdn.py
src/mbn_mcfg_tools/: cli.py  hash_header.py  mbn.py  mbn_json.py  mcfg.py  utils.py
src/mbntools/: mbn.py  mbn_json.py  mcfg.py
testmbns/: ZTE_blade_a6_IT_H3G.mbn  ZTE_blade_a6_lite_DE_DTPL.mbn  ZTE_blade_a6_lite_IT_H3G.mbn  lg_g4sbeat_eu_ee.mbn  lg_k9_h3g_italy.mbn  meizu_16th_italy_h3g.mbn  nokia_1_3_mcfg_sw.mbn  nokia_2_8_franken.mbn  nokia_8110_4G_it_h3g.mbn  nokia_9_pureview_italy_h3g.mbn  razer_phone2_italy_h3g.mbn  redmi_8_IT_H3G.mbn  sony_xperia_1_iii_italy_h3g.mbn  xiaomi_11t_pro_at_h3g.mbn  xiaomi_11t_pro_italy_h3g.mbn  xiaomi_mi9_italy_h3g.mbn  xiaomi_mi_mix_2_italy_h3g.mbn
tests/: mbns.py  test_extract.py  test_hashes.py
(+8826 files in other folders)
