[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mbntools"
version = "0.0.1"
dependencies = [
  "pyelftools"
]

[project.scripts]
extract = "mbntools.cli:main"

[project.optional-dependencies]
test = [ "pytest" ]
color = [ "colorama" ]

[tools.pytest.ini_options]
testpaths = ["tests"]
