[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mbn-mcfg-tools"
version = "0.0.1"
dependencies = [
  "pyelftools"
]

[project.scripts]
mbn-tool = "mbn_mcfg_tools.cli:main"

[project.optional-dependencies]
color = [ "colorama" ]

[tools.pytest.ini_options]
testpaths = ["tests"]
